--- a/layout/_partial/home.ejs
+++ b/layout/_partial/home.ejs
@@ -3,16 +3,16 @@
     <img src="<%= theme.avatar %>" alt="" />
   </a>
   <h1 class="name" style="font-family: <%= theme.blog_name_font_familiy || 'calligraffittiregular' %>">
-    <%= theme.blog_name %>
+    <%= config.title %>
   </h1>
   <div class="slogan">
-    <%= theme.slogan %>
+    <%= config.subtitle %>
   </div>
 
   <hr>
 
   <ul class="text-center nav">
-    <% theme.home_nav.forEach(function(item, i){ %>
+    <% config.home_nav.forEach(function(item, i){ %>
       <li class="item">
         <% if(item.target_blank === true) { %>
           <a href="<%= item.url %>" rel="noopener noreferrer" target="_blank"><%= item.name %></a>
