--- a/layout/_partial/component/page-header.ejs
+++ b/layout/_partial/component/page-header.ejs
@@ -15,10 +15,10 @@
     </a>
     <div class="info">
       <h3 class="name" style="font-family: <%= theme.blog_name_font_familiy || 'calligraffittiregular' %>">
-        <%= theme.blog_name %>
+        <%= config.title %>
       </h3>
       <div class="slogan">
-        <%= theme.slogan %>
+        <%= config.subtitle %>
       </div>
     </div>
   </div>
